Clean up thesis proposal

--- a/latex/ch2_background.tex
+++ b/latex/ch2_background.tex
@@ -617,7 +617,7 @@ Waveforms. Subband decomposition.
 	mention signal processing, basis pursuit, etc., i.e. classic approximate/probabilistic signal processing
 }
 
-\subsubsection{Spectral demixing, time-frequency masking, and oracles}
+\subsubsection{Time-frequency masking and oracle estimators}
 
 \ichfeedback{i think the idea of the oracle mask computed from ground truths is important enough to be in the section title}
 
