--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -1228,3 +1228,196 @@ url={https://hal.inria.fr/hal-00922378/document}
  volume = {13},
  year = {2001}
 }
+
+@article{introtoml,
+author = {Bastanlar, Yalin and Ozuysal, Mustafa},
+year = {2014},
+pages = {105-128},
+title = {Introduction to Machine Learning},
+volume = {1107},
+isbn = {978-1-62703-747-1},
+journal = {Methods in molecular biology (Clifton, N.J.)},
+doi = {10.1007/978-1-62703-748-8_7}
+}
+
+@inbook{introtodl,
+author = {II, Taweh},
+year = {2017},
+pages = {1-9},
+title = {Introduction to Deep Learning},
+isbn = {978-1-4842-2733-6},
+doi = {10.1007/978-1-4842-2734-3_1}
+}
+
+@book{boyd2004convex,
+ title={Convex optimization},
+ author={Boyd, Stephen and Vandenberghe, Lieven},
+ year={2004},
+ publisher={Cambridge university press}
+} 
+
+@article{mlopt1,
+author = {Gambella, Claudio and Ghaddar, Bissan and Naoum-Sawaya, Joe},
+year = {2020},
+title = {Optimization Problems for Machine Learning: A Survey},
+volume = {290},
+journal = {European Journal of Operational Research},
+doi = {10.1016/j.ejor.2020.08.045}
+}
+
+@inproceedings{mlopt2,
+author = {Le, Quoc and Ngiam, Jiquan and Coates, Adam and Lahiri, Ahbik and Prochnow, Bobby and Ng, Andrew},
+year = {2011},
+pages = {265-272},
+title = {On Optimization Methods for Deep Learning},
+volume = {2011},
+journal = {Proceedings of the 28th International Conference on Machine Learning (ICML-11)}
+}
+
+@article{musicsp,
+author = {Müller, Meinard and Ellis, Daniel and Klapuri, Anssi and Richard, Gaël},
+year = {2011},
+pages = {1088 - 1110},
+title = {Signal Processing for Music Analysis},
+volume = {5},
+journal = {Selected Topics in Signal Processing, IEEE Journal of},
+doi = {10.1109/JSTSP.2011.2112333}
+}
+
+@article{fiftyyears,
+  title={Fifty years of signal processing: The ieee signal processing society and its technologies 1948-1998},
+  author={Nebeker, N},
+  journal={The IEEE Signal Processing Society},
+  year={1998}
+}
+
+@inbook{sgd,
+author = {Ketkar, Nikhil},
+year = {2017},
+pages = {111-130},
+title = {Stochastic Gradient Descent},
+isbn = {978-1-4842-2765-7},
+doi = {10.1007/978-1-4842-2766-4_8}
+}
+
+@article{optsp,
+title={Real-Time Convex Optimization in Signal Processing},
+author = {Mattingley, J. and Boyd, S.},
+journal={IEEE Signal Processing Magazine},
+year = {2010},
+volume = {27(3)},
+pages = {50-61}}
+
+@article{stochasticsp,
+   title={A Survey of Stochastic Simulation and Optimization Methods in Signal Processing},
+   volume={10},
+   ISSN={1941-0484},
+   url={http://dx.doi.org/10.1109/JSTSP.2015.2496908},
+   DOI={10.1109/jstsp.2015.2496908},
+   number={2},
+   journal={IEEE Journal of Selected Topics in Signal Processing},
+   publisher={Institute of Electrical and Electronics Engineers (IEEE)},
+   author={Pereyra, Marcelo and Schniter, Philip and Chouzenoux, Emilie and Pesquet, Jean-Christophe and Tourneret, Jean-Yves and Hero, Alfred O. and McLaughlin, Steve},
+   year={2016},
+   month={Mar},
+   pages={224–241}
+}
+
+@inproceedings{statisticalsp,
+  title={An Introduction To Statistical Signal Processing},
+  author={R. Gray and L. Davisson},
+  year={2004}
+}
+
+@inproceedings{mlsp1,
+author={Rehr, Robert and Gerkmann, Timo},
+booktitle={ICASSP 2019-2019 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+title={An Analysis of Noise-aware Features in Combination with the Size and Diversity of Training Data for DNN-based Speech Enhancement},
+year={2019},
+pages={601-605},
+doi={10.1109/ICASSP.2019.8682991}}
+
+@inproceedings{mlsp2,
+author={Rehr, Robert and Gerkmann, Timo},
+booktitle={Speech Communication; 12. ITG Symposium},
+title={A Combination of Pre-Trained Approaches and Generic Methods for an Improved Speech Enhancement},
+year={2016},
+pages={1-5}}
+
+@article{audiodeeplearning,
+author = {Purwins, Hendrik and Li, Bo and Virtanen, Tuomas and Schlüter, Jan and Chang, Shuo-yiin and Sainath, Tara},
+year = {2019},
+month = {04},
+pages = {},
+title = {Deep Learning for Audio Signal Processing},
+volume = {13},
+journal = {IEEE Journal on Selected Topics in Signal Processing},
+doi = {10.1109/JSTSP.2019.2908700}
+}
+
+@inbook{nlpml,
+author = {Johri, Prashant and Khatri, Sunil Kumar and Al-Taani, Ahmad and Sabharwal, Munish and Suvanov, Shakhzod and Chauhan, Avneesh},
+year = {2021},
+pages = {365-375},
+title = {Natural Language Processing: History, Evolution, Application, and Future Work},
+isbn = {978-981-15-9711-4},
+doi = {10.1007/978-981-15-9712-1_31}
+}
+
+@article{cvml,
+author = {Esposito, Floriana and Malerba, Donato},
+year = {2010},
+pages = {693-705},
+title = {Editorial: Machine learning in computer vision},
+volume = {15},
+journal = {Applied Artificial Intelligence: An International Journal},
+doi = {10.1080/088395101317018546}
+}
+
+@inproceedings{generalai,
+author = {Iman, Mohammadreza and Arabnia, Hamid and Branchinst, Robert},
+year = {2020},
+month = {05},
+title = {Pathways to Artificial General Intelligence: A Brief Overview of Developments and Ethical Issues via Artificial Intelligence, Machine Learning, Deep Learning, and Data Science},
+booktitle = {ICAI'20 - The 22nd Int'l Conf on Artificial Intelligence},
+}
+
+@article{cnns,
+   title={A survey of the recent architectures of deep convolutional neural networks},
+   volume={53},
+   ISSN={1573-7462},
+   url={http://dx.doi.org/10.1007/s10462-020-09825-6},
+   DOI={10.1007/s10462-020-09825-6},
+   number={8},
+   journal={Artificial Intelligence Review},
+   publisher={Springer Science and Business Media LLC},
+   author={Khan, Asifullah and Sohail, Anabia and Zahoora, Umme and Qureshi, Aqsa Saeed},
+   year={2020},
+   month={Apr},
+   pages={5455–5516}
+}
+
+@article{rnns,
+    author = {Yu, Yong and Si, Xiaosheng and Hu, Changhua and Zhang, Jianxun},
+    title = "{A Review of Recurrent Neural Networks: LSTM Cells and Network Architectures}",
+    journal = {Neural Computation},
+    volume = {31},
+    number = {7},
+    pages = {1235-1270},
+    year = {2019},
+    month = {07},
+    issn = {0899-7667},
+    doi = {10.1162/neco_a_01199},
+    url = {https://doi.org/10.1162/neco\_a\_01199},
+    eprint = {https://direct.mit.edu/neco/article-pdf/31/7/1235/1053200/neco\_a\_01199.pdf},
+}
+
+@article{seq2seqs,
+author = {Yousuf, Hana and Gaid, Michael and Salloum, Said and Shaalan, Khaled},
+year = {2020},
+month = {10},
+title = {A Systematic Review on Sequence to Sequence Neural Network and its Models},
+volume = {11},
+journal = {International Journal of Electrical and Computer Engineering},
+doi = {10.11591/ijece.v11i3.pp2315-2326}
+}
