Improve section on tf masking and oracle estimators

--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -1319,7 +1319,6 @@ pages = {50-61}}
    publisher={Institute of Electrical and Electronics Engineers (IEEE)},
    author={Pereyra, Marcelo and Schniter, Philip and Chouzenoux, Emilie and Pesquet, Jean-Christophe and Tourneret, Jean-Yves and Hero, Alfred O. and McLaughlin, Steve},
    year={2016},
-   month={Mar},
    pages={224–241}
 }
 
@@ -1393,7 +1392,6 @@ booktitle = {ICAI'20 - The 22nd Int'l Conf on Artificial Intelligence},
    publisher={Springer Science and Business Media LLC},
    author={Khan, Asifullah and Sohail, Anabia and Zahoora, Umme and Qureshi, Aqsa Saeed},
    year={2020},
-   month={Apr},
    pages={5455–5516}
 }
 
@@ -1420,4 +1418,13 @@ title = {A Systematic Review on Sequence to Sequence Neural Network and its Mode
 volume = {11},
 journal = {International Journal of Electrical and Computer Engineering},
 doi = {10.11591/ijece.v11i3.pp2315-2326}
+}
+
+@inproceedings{ditchphase,
+author = {Parry, R. and Essa, Irfan},
+year = {2007},
+pages = {II-661 },
+title = {Incorporating Phase Information for Source Separation via Spectrogram Factorization},
+volume = {2},
+doi = {10.1109/ICASSP.2007.366322}
 }
