--- a/latex/proposal.tex
+++ b/latex/proposal.tex
@@ -48,7 +48,7 @@ The short-time Fourier transform (STFT) is an important tool for the time-freque
 
 \section{Previous Work}
 
-Computational source separation has a long history (\cite{musicsepintro1}), originating from the tasks of blind source separation (BSS), used for speech denoising. In blind source separation, Independent Component Analysis (ICA) is a popular algorithm which exploits spatial information, but it can only be used when there are as many channels in the mixture (corresponding to differently placed microphones) as the number of sources. ICA also depends on sources being independent and stationary (\cite{musicsepintro1}). According to \textcite{musicsepintro1}, music source separation violates these requirements by typically being recorded in mono or stereo, being dependent (e.g. singing voice and piano which are playing the same melody), and being nonstationary (each musical source varies meaningfully with time, unlike noise). As a result, music-specific approaches were devised, including spectral techniques based on the STFT like Kernel Additive Modeling (KAM) or Nonnegative Matrix Factorization (NMF) (\cite{musicsepgood}).
+Computational source separation has a long history (\cite{musicsepintro1}), originating from the task of blind source separation (BSS), used for speech denoising. In blind source separation, Independent Component Analysis (ICA) is an algorithm which exploits spatial information, but it can only be used when there are as many channels in the mixture (corresponding to differently placed microphones) as the number of sources (\cite{ica1}). ICA also depends on sources being independent and stationary (\cite{musicsepintro1}). According to \textcite{musicsepintro1}, music source separation violates these requirements by typically being recorded in mono or stereo, being dependent (e.g. singing voice and piano in the same key), and being nonstationary (each musical source varies meaningfully with time, unlike noise). As a result, music-specific approaches were devised, including spectral techniques based on the STFT like Kernel Additive Modeling (KAM) or Nonnegative Matrix Factorization (NMF) (\cite{musicsepgood}).
 
 More recently, data-driven models based on deep learning surpassed previous approaches (\cite{sisec2018}). Open-Unmix was created by \textcite{umx} as an open-source, reference implementation of a state-of-the-art deep neural network for music demixing. Open-Unmix is based on STFT masking, and is intended to foster reproducible research by only using the open MUSDB18-HQ dataset for training data (\cite{musdb18hq}). Manipulating time-frequency resolution is one of many strategies for improving spectral music demixing. \textcite{driedger} used multiple STFTs with different window sizes. \textcite{fitzgerald2} replaced the STFT with the constant-Q transform. \textcite{plumbley2} used varying sizes of time and frequency filters applied to the STFT according to the constant-Q scale.
 
@@ -60,7 +60,7 @@ Finally, Open-Unmix will be adapted to use the sliCQT in place of the STFT, pote
 
 \section{Contributions / Summary}
 
-In spectral music demixing approaches that use the STFT, choosing the appropriate time-frequency resolution with the window size plays an important role. In this thesis, the sliCQT with varying time-frequency resolution is explored as a replacement for the STFT in a deep learning model for music demixing, Open-Unmix. The resulting neural network could successfully perform the task of music demixing. It scored slightly worse than the reference Open-Unmix, but the final network was \textasciitilde$5 \times$ smaller than the original. The proposed model was also submitted to the ISMIR 2021 Music Demixing Challenge,\footnote{\url{https://www.aicrowd.com/challenges/music-demixing-challenge-ismir-2021}}\textsuperscript{,}\footnote{\url{https://mdx-workshop.github.io/}} demonstrating that it could pass a verified third-party evaluation process. The sliCQT is a flexible transform, and future work should explore alternative parameter search strategies or neural network architectures to further improve demixing performance. 
+In spectral music demixing approaches that use the STFT, choosing the appropriate time-frequency resolution with the window size plays an important role. In this thesis, the sliCQT with varying time-frequency resolution is explored as a replacement for the STFT in a deep learning model for music demixing, Open-Unmix. The resulting neural network could successfully perform the task of music demixing with BSS scores that were competitive with the reference Open-Unmix, with a \textasciitilde$5 \times$ smaller network. The proposed model was also submitted to the ISMIR 2021 Music Demixing Challenge,\footnote{\url{https://www.aicrowd.com/challenges/music-demixing-challenge-ismir-2021}}\textsuperscript{,}\footnote{\url{https://mdx-workshop.github.io/}} demonstrating that it could pass a verified third-party evaluation process. The sliCQT is a flexible transform, and future work should explore alternative parameter search strategies or neural network architectures to further improve demixing performance. 
 
 \vfill
 \clearpage %force a page break
