--- a/latex/ch2_background.tex
+++ b/latex/ch2_background.tex
@@ -627,7 +627,7 @@ Kernel Additive Modeling (KAM) is the simplest form of music source modeling (\c
 	\label{fig:fitzhpss}
 \end{figure}
 
-Spectrogram factorization models are more sophisticated than KAM, and the most popular spectrogram factorization model is Nonnegative Matrix Factorization (NMF) (\cite{musicsepsurvey, musicsepgood}). According to \textcite{musicsepgood}, NMF ``attempts to factorize a given non-negative matrix into two non-negative matrices,'' and it can be applied to the non-negative magnitude spectrogram of the mix, $M$ to separate sources with spectral weight matrices $W$ and time activation matrices $H$. We refer readers to \textcite{nmfpaper}'s paper on NMF techniques. Most recently, data-driven approaches based on machine learning and deep learning have significantly surpassed past approaches (\cite{musicsepgood, sisec2018}). Figure \ref{fig:spectraldemix} shows KAM, NMF, and deep neural network-based spectral demixing.
+Spectrogram factorization models are more sophisticated than KAM, and the most popular spectrogram factorization model is Nonnegative Matrix Factorization (NMF) (\cite{musicsepsurvey, musicsepgood}). According to \textcite{musicsepgood}, NMF ``attempts to factorize a given non-negative matrix into two non-negative matrices,'' and it can be applied to the non-negative magnitude spectrogram of the mix, $M$, to separate it into frequency weight matrices $W$ and time activation matrices $H$; \textcite{nmfpaper}'s survey on NMF techniques covers the algorithm in more detail. Most recently, data-driven approaches based on machine learning and deep learning have significantly surpassed past approaches (\cite{musicsepgood, sisec2018}). Figure \ref{fig:spectraldemix} shows different techniques for spectral demixing.
 
 \begin{figure}[ht]
 	\centering
@@ -639,11 +639,54 @@ Spectrogram factorization models are more sophisticated than KAM, and the most p
 
 \newpagefill
 
-\subsubsection{Time-frequency masking and oracle estimators}
+\subsection{Time-frequency masking and oracle estimators}
 
-\ichfeedback{i think the idea of the oracle mask computed from ground truths is important enough to be in the section title}
+Surveys on speech (\cite{speechmask}) and music separation (\cite{musicmask}) indicate that the majority of source separation algorithms use the technique of time-frequency masking (or spectral masking) to separate the sources.  \textcite{masking} describe different time-frequency masking strategies in audio source separation. A time-frequency mask (or spectral mask, or masking filter) is a matrix of the same size as the complex STFT, or its real-valued magnitude, by which the STFT is multiplied to mask, filter, or suppress specific time-frequency bins.
 
-\ichfeedback{it will come up later in the thesis when choosing hyperparameters for the sliCQ}
+A soft mask, or ratio mask, has real values $\in [0.0, 1.0]$, and a binary or hard mask has logical values, i.e., only 0 and 1. To compute a binary mask, there must be an additional real-valued parameter, $\theta \in [0.0, 1.0]$, which is the separation factor -- values below $\theta$ are set to 0, and values above $\theta$ are set to 1. According to \textcite{masking}, soft masks are generally produce a higher quality of sound. An illustration of spectral masking is shown in figure \ref{fig:masks}.
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics[width=0.7\textwidth]{./images-mss/maskdemo.png}
+	\caption{Results of a soft and hard oracle mask applied for speech denoising}
+	\label{fig:masks}
+\end{figure}
+
+The oracle mask, or oracle estimator, is a perfect time-frequency mask which is computed from ground-truth data. The use of the oracle estimator is to give an idea of the upper limit of audio quality from an algorithm or machine learning model for source separation or demixing. Typically, the mask is applied to and computed from magnitude spectrograms (\cite{fitzgerald1, fitzgerald2, driedger, umx, plumbley1, plumbley2}). Discarding the phase of the complex STFT is a choice made for simplicity, but the phase may be important for source separation applications (\cite{ditchphase}).
+
+To illustrate the calculation of the oracle mask, let us describe a simple case of a mixed song consisting of a vocal and drum track. We also need to have access to the isolated source recordings from which the mixed song was created.
+
+We start by denoting the waveforms $x_{v}[n]$ and $x_{d}[n]$ for the isolated vocal and drum tracks respectively. The mixed song is defined by the waveform $x_{m}[n] = x_{v}[n] + x_{d}[n]$. To apply the music demixing task to this waveform, let's say that we want our algorithm or network to take the mixed waveform $x_{m}[n]$ as an input, and estimate the two source waveforms of vocals $\hat{x}_{v}[n]$ and drums $\hat{x}_{d}[n]$.
+
+Given the following operations to get the STFTs of the mix and two sources, we seek to calculate various interesting oracle masks:
+\begin{align}
+	\nonumber X_{m} &= \text{STFT}(x_{m}[n]), |X_{m}| = \text{abs}(X_{m})\\
+	\nonumber X_{v} &= \text{STFT}(x_{v}[n]), |X_{v}| = \text{abs}(X_{v})\\
+	\nonumber X_{d} &= \text{STFT}(x_{d}[n]), |X_{d}| = \text{abs}(X_{d})
+\end{align}
+ 
+\textcite{sisec2018} report the performance of 5 oracles, called IRM1, IRM2, IBM1, IBM2, and the MWF (multichannel Wiener filter). The first 4 are more relevant to stereo music, which is the case considered in this thesis. The ``I'' is for Ideal, ``R|B'' denotes a Ratio vs. Binary mask, ``M'' is for Mask, and the trailing number is the $p$th power which the magnitude spectrogram is raised to -- the magnitude spectrogram raised to the 1st power is simply itself, while one raised to the 2nd power is the power spectrogram.
+
+The oracles for the vocal source (and the same equations apply to the drum track) are computed thus, noting that a typical default value for $\theta$ is 0.5:
+\begin{align}
+	\nonumber \text{IRM1}_{v} &= \frac{|X_{v}|^{1}}{|X_{m}|^{1}}\text{,\qquad}
+	\nonumber \text{IRM2}_{v} = \frac{|X_{v}|^{2}}{|X_{m}|^{2}}\\
+	\nonumber \text{IBM1}_{v} &= \begin{cases}
+		0 \text{ where } \frac{|X_{v}|^{1}}{|X_{m}|^{1}} < \theta\\
+		1 \text{ where } \frac{|X_{v}|^{1}}{|X_{m}|^{1}} \ge \theta
+	\end{cases},
+	\nonumber \text{IBM2}_{v} = \begin{cases}
+		0 \text{ where } \frac{|X_{v}|^{2}}{|X_{m}|^{2}} < \theta\\
+		1 \text{ where } \frac{|X_{v}|^{2}}{|X_{m}|^{2}} \ge \theta
+	\end{cases}
+\end{align}
+
+To estimate the time domain waveform from an oracle mask, the complex STFT of the mixed waveform, $X_{m}$, is multiplied by the mask, and the resultant complex STFT is inverted back to the time-domain waveform:
+\begin{align}
+	\nonumber \hat{X}_{v\text{, IRM1}} &= X_{m} \cdot \text{IRM1}_{v}, \hat{x}_{v\text{, IRM1}} = \text{iSTFT}(\hat{X}_{v\text{, IRM1}})
+\end{align}
+
+\newpagefill
 
 \subsubsection{Open-Unmix (UMX) and CrossNet-Open-Unmix (X-UMX)}
 
